[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = { version = "0.4.39", features = ["serde"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.31"
governor = "0.8.0"
hex = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["brotli", "deflate", "gzip", "json"] }
roaring = { version = "0.10.10", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
typed-builder = "0.20.0"
